# otus

./: ..gitignore.swp  .gitignore  Editor_8hpp_source.html  GraphicPrimitive_8hpp_source.html  IDisplay_8hpp_source.html  IStorage_8hpp_source.html  README.md  annotated.html  bulk_8h_source.html  classBulk-members.html  classBulk.html  classBulk_1_1Reader-members.html  classBulk_1_1Reader.html  classBulk_1_1Reader__inherit__graph.map  classBulk_1_1Reader__inherit__graph.md5  classBulk_1_1Storage-members.html  classBulk_1_1Storage.html  classBulk_1_1Storage__inherit__graph.map  classBulk_1_1Storage__inherit__graph.md5  classCRC32HashAlgorithm-members.html  classCRC32HashAlgorithm.html  classCRC32HashAlgorithm__inherit__graph.map  classCRC32HashAlgorithm__inherit__graph.md5  classCircle-members.html  classCircle.html  classCircle__coll__graph.md5  classCircle__inherit__graph.map  classCircle__inherit__graph.md5  classConsoleLogger-members.html  classConsoleLogger.html  classConsoleLogger__coll__graph.md5  classConsoleLogger__inherit__graph.map  classConsoleReader-members.html  classConsoleReader.html  classConsoleReader__coll__graph.md5  classConsoleReader__inherit__graph.map  classDocument-members.html  classDocument.html  classDuplicateFinder-members.html  classDuplicateFinder.html  (+121 more)
.github/: home_01.yaml
.github/workflows/: home_01.yaml  home_02.yaml  home_03.yaml  home_04.yaml  home_05.yaml  home_06.yaml  home_07.yaml  home_08.yaml
allocators/: CMakeLists.txt
allocators/app/: CMakeLists.txt  main.cpp
allocators/app/include/: CustomContainer.h  allocator_fix.h  allocator_pool.h  allocator_stack.h
allocators/tests/: test_main.cpp
bayan/: .clang-format  CMakeLists.txt  Doxyfile  READMY.md  bayan.1  format_src.sh
bayan/include/: dubler.h  lrucache.h
bayan/include/finddub/: finddub.h
bayan/src/: CMakeLists.txt  dubler.cpp  main.cpp
bayan/src/finddub/: CMakeLists.txt  finddub.cpp
bayan/tests/: CMakeLists.txt  test_main.cpp
bulk/: CMakeLists.txt  Doxyfile  processCommand_algorithm.md
bulk/app/: CMakeLists.txt  main.cpp  processCommand_algorithm.md
bulk/app/include/: bulk.h
bulk/app/src/: bulk.cpp
bulk/tests/: CMakeLists.txt  test_main.cpp
ci-cd/: CMakeLists.txt
ci-cd/app/: CMakeLists.txt  main.cpp
ci-cd/lib/: CMakeLists.txt
ci-cd/lib/include/: version_bkp.h
ci-cd/tests/: CMakeLists.txt  test_main.cpp
editor/: CMakeLists.txt
editor/app/: CMakeLists.txt  main.cpp
editor/app/include/: Editor.hpp  GraphicPrimitive.hpp  IDisplay.hpp  IStorage.hpp
editor/tests/: CMakeLists.txt
html/: Editor_8hpp_source.html  IDisplay_8hpp_source.html  IStorage_8hpp_source.html  annotated.html  classCoutRedirector-members.html  classCoutRedirector.html  classDocument-members.html  classDocument.html  classEditor-members.html  classEditor.html  classEditor_1_1IDisplay-members.html  classEditor_1_1IDisplay.html  classEditor_1_1IDisplay__inherit__graph.map  classEditor_1_1IDisplay__inherit__graph.md5  classEditor_1_1IStorage.html  classEditor_1_1IStorage__inherit__graph.map  classEditor_1_1IStorage__inherit__graph.md5  classIpPrinter-members.html  classIpPrinter.html  classIpPrinterCpt-members.html  classIpPrinterCpt.html  classLine-members.html  classLine__inherit__graph.md5  classMainDisplay.html  classMainDisplay__coll__graph.map  classMainDisplay__coll__graph.md5  classMainStorage-members.html  classMainStorage.html  classMainStorage__coll__graph.map  classMainStorage__coll__graph.md5  classPrimitiveFactory-members.html  classes.html  concept__print__ip_8hpp_source.html  cprint__ip_8hpp_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_78f5ecd95a37a67589a284a718a0be9c.html  dir_78f5ecd95a37a67589a284a718a0be9c_dep.map  dir_d422163b96683743ed3963d4aac17747.html  files.html  functions.html  (+31 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
ip_filter/: CMakeLists.txt
ip_filter/app/: CMakeLists.txt  main.cpp
ip_filter/app/include/: ip_filters.h
ip_filter/app/src/: ip_filters.cpp
ip_filter/tests/: CMakeLists.txt  test_main.cpp
matrix/: CMakeLists.txt  Doxyfile  matrix_details.md
matrix/app/: CMakeLists.txt  main.cpp
matrix/app/include/: coo.h  csr.h  matrix.h
matrix/tests/: CMakeLists.txt  test_main.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
sfinae/: CMakeLists.txt  Doxyfile
sfinae/app/: CMakeLists.txt  main.cpp
sfinae/app/include/: concept_print_ip.hpp  cprint_ip.hpp  print_ip.hpp
sfinae/tests/: test_main.cpp
